Fix cursor, navbar active state, and animations on page navigation
- Add type='module' to script tags in diensten.html, over.html, and contact.html
- Add hamburger menu HTML structure to all pages
- Add header class to all header elements for hamburger menu functionality
- Improve active link detection in navbarSwirl.js and hamburgerMenu.js
- Fix cursor initialization to handle page navigation properly
- Ensure cursor appears on all pages after navigation

--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Débeauty - Contact</title>
+    <title>Contact - Débeauty</title>
     
-    <!-- Font Preload -->
-    <link rel="preload" href="/webFonts/ParisAvenue/font.woff2" as="font" type="font/woff2" crossorigin>
-
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,26 +27,26 @@
             </div>
             <ul class="navbar__links">
                 <li class="navbar__left-links">
-                    <a href="/">Home</a>
-                    <a href="/diensten">Diensten</a>
+                    <a href="index.html">Home</a>
+                    <a href="diensten.html">Diensten</a>
                 </li>
                 <li class="navbar__logo-container">
-                    <a href="/" class="navbar__logo-link">
+                    <a href="index.html" class="navbar__logo-link">
                         <img id="navbar__logo" class="navbar__logo" src="/assets/logo.png" alt="débeauty">
                     </a>
                 </li>
                 <li class="navbar__right-links">
-                    <a href="/over">Over mij</a>
-                    <a href="/contact">Contact</a>
+                    <a href="over.html">Over ons</a>
+                    <a href="contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
         <div class="navbar__mobile-overlay">
             <div class="navbar__mobile-menu">
-                <a href="/" class="navbar__mobile-link">Home</a>
-                <a href="/diensten" class="navbar__mobile-link">Diensten</a>
-                <a href="/over" class="navbar__mobile-link">Over mij</a>
-                <a href="/contact" class="navbar__mobile-link">Contact</a>
+                <a href="index.html" class="navbar__mobile-link">Home</a>
+                <a href="diensten.html" class="navbar__mobile-link">Diensten</a>
+                <a href="over.html" class="navbar__mobile-link">Over ons</a>
+                <a href="contact.html" class="navbar__mobile-link">Contact</a>
             </div>
         </div>
     </header>
@@ -90,12 +87,8 @@
                     <div class="contact__item">
                         <div class="contact__icon">🕒</div>
                         <div class="contact__details">
-                            <h3 class="contact__label">Openingsuren</h3>
-                            <p class="contact__text">
-                                Ma-Vr: 9:00 - 18:00<br>
-                                Za: 9:00 - 16:00<br>
-                                Zo: Gesloten
-                            </p>
+                            <h3 class="contact__label">Op afspraak</h3>
+                            <p class="contact__text">Op afspraak</p>
                         </div>
                     </div>
                 </div>
