--- a/over.html
+++ b/over.html
@@ -3,11 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Débeauty - Over mij</title>
+    <title>Over ons - Débeauty</title>
     
-    <!-- Font Preload -->
-    <link rel="preload" href="/webFonts/ParisAvenue/font.woff2" as="font" type="font/woff2" crossorigin>
-
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,42 +27,42 @@
             </div>
             <ul class="navbar__links">
                 <li class="navbar__left-links">
-                    <a href="/">Home</a>
-                    <a href="/diensten">Diensten</a>
+                    <a href="index.html">Home</a>
+                    <a href="diensten.html">Diensten</a>
                 </li>
                 <li class="navbar__logo-container">
-                    <a href="/" class="navbar__logo-link">
+                    <a href="index.html" class="navbar__logo-link">
                         <img id="navbar__logo" class="navbar__logo" src="/assets/logo.png" alt="débeauty">
                     </a>
                 </li>
                 <li class="navbar__right-links">
-                    <a href="/over">Over mij</a>
-                    <a href="/contact">Contact</a>
+                    <a href="over.html">Over ons</a>
+                    <a href="contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
         <div class="navbar__mobile-overlay">
             <div class="navbar__mobile-menu">
-                <a href="/" class="navbar__mobile-link">Home</a>
-                <a href="/diensten" class="navbar__mobile-link">Diensten</a>
-                <a href="/over" class="navbar__mobile-link">Over mij</a>
-                <a href="/contact" class="navbar__mobile-link">Contact</a>
+                <a href="index.html" class="navbar__mobile-link">Home</a>
+                <a href="diensten.html" class="navbar__mobile-link">Diensten</a>
+                <a href="over.html" class="navbar__mobile-link">Over ons</a>
+                <a href="contact.html" class="navbar__mobile-link">Contact</a>
             </div>
         </div>
     </header>
     <main>
         <section class="page-header">
             <h1 class="page-header__title">Over Débeauty</h1>
-            <p class="page-header__subtitle">Ontdek mijn verhaal en mijn passie voor schoonheid</p>
+            <p class="page-header__subtitle">Ontdek ons verhaal en onze passie voor schoonheid</p>
         </section>
 
         <section class="about">
             <div class="about__content">
                 <div class="about__text">
-                    <h2 class="about__subtitle">Mijn Missie</h2>
+                    <h2 class="about__subtitle">Onze Missie</h2>
                     <p class="about__description">
-                        Bij Débeauty geloof ik dat iedereen het recht heeft om zich mooi en zelfverzekerd te voelen. 
-                        Met jarenlange ervaring als schoonheidsspecialiste sta ik klaar om jou te helpen ontspannen en 
+                        Bij Débeauty geloven we dat iedereen het recht heeft om zich mooi en zelfverzekerd te voelen. 
+                        Ons team van ervaren schoonheidsspecialisten staat klaar om jou te helpen ontspannen en 
                         je beste zelf naar boven te halen.
                     </p>
                 </div>
@@ -83,7 +80,7 @@
             </div>
 
             <div class="values">
-                <h2 class="values__title">Mijn Waarden</h2>
+                <h2 class="values__title">Onze Waarden</h2>
                 <div class="values__grid">
                     <div class="value">
                         <div class="value__icon">🧘</div>
