--- a/diensten.html
+++ b/diensten.html
@@ -3,11 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Débeauty - Diensten</title>
+    <title>Diensten - Débeauty</title>
     
-    <!-- Font Preload -->
-    <link rel="preload" href="/webFonts/ParisAvenue/font.woff2" as="font" type="font/woff2" crossorigin>
-
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,33 +27,33 @@
             </div>
             <ul class="navbar__links">
                 <li class="navbar__left-links">
-                    <a href="/">Home</a>
-                    <a href="/diensten">Diensten</a>
+                    <a href="index.html">Home</a>
+                    <a href="diensten.html">Diensten</a>
                 </li>
                 <li class="navbar__logo-container">
-                    <a href="/" class="navbar__logo-link">
+                    <a href="index.html" class="navbar__logo-link">
                         <img id="navbar__logo" class="navbar__logo" src="/assets/logo.png" alt="débeauty">
                     </a>
                 </li>
                 <li class="navbar__right-links">
-                    <a href="/over">Over mij</a>
-                    <a href="/contact">Contact</a>
+                    <a href="over.html">Over ons</a>
+                    <a href="contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
         <div class="navbar__mobile-overlay">
             <div class="navbar__mobile-menu">
-                <a href="/" class="navbar__mobile-link">Home</a>
-                <a href="/diensten" class="navbar__mobile-link">Diensten</a>
-                <a href="/over" class="navbar__mobile-link">Over mij</a>
-                <a href="/contact" class="navbar__mobile-link">Contact</a>
+                <a href="index.html" class="navbar__mobile-link">Home</a>
+                <a href="diensten.html" class="navbar__mobile-link">Diensten</a>
+                <a href="over.html" class="navbar__mobile-link">Over ons</a>
+                <a href="contact.html" class="navbar__mobile-link">Contact</a>
             </div>
         </div>
     </header>
     <main>
         <section class="page-header">
-            <h1 class="page-header__title">Mijn Diensten</h1>
-            <p class="page-header__subtitle">Ontdek mijn uitgebreide schoonheidsbehandelingen</p>
+            <h1 class="page-header__title">Onze Diensten</h1>
+            <p class="page-header__subtitle">Ontdek onze uitgebreide schoonheidsbehandelingen</p>
         </section>
 
         <section class="services">
@@ -64,42 +61,42 @@
                 <div class="service-card">
                     <div class="service-card__icon">✨</div>
                     <h3 class="service-card__title">Gelaatsbehandeling</h3>
-                    <p class="service-card__description">Basis en intensieve behandelingen, diverse maskers voor elke huidtype</p>
-                    <div class="service-card__price">€54-90</div>
+                    <p class="service-card__description">Aangepast aan ieders huidtype</p>
+                    <div class="service-card__price">Basis: €54<br>Intensief: €70-90</div>
                 </div>
 
                 <div class="service-card">
                     <div class="service-card__icon">💅</div>
                     <h3 class="service-card__title">Manicure</h3>
-                    <p class="service-card__description">Nagelverzorging, lakken en Gelish behandeling</p>
-                    <div class="service-card__price">€6-20</div>
+                    <p class="service-card__description">Nagels vijlen, nagelriemen zuiver maken, handcrème</p>
+                    <div class="service-card__price">€20</div>
                 </div>
 
                 <div class="service-card">
                     <div class="service-card__icon">🦶</div>
                     <h3 class="service-card__title">Pedicure</h3>
-                    <p class="service-card__description">Onderhouds- en intensieve pedicure, lakken en Gelish behandeling</p>
-                    <div class="service-card__price">€6-30</div>
+                    <p class="service-card__description">Onderhoudspedicure binnen de 6 weken</p>
+                    <div class="service-card__price">€25</div>
                 </div>
 
                 <div class="service-card">
                     <div class="service-card__icon">🧘</div>
                     <h3 class="service-card__title">Massage</h3>
-                    <p class="service-card__description">Volledige lichaamsmassage en rug- en nekmassage</p>
-                    <div class="service-card__price">€25-60</div>
+                    <p class="service-card__description">Volledige lichaamsmassage</p>
+                    <div class="service-card__price">€60</div>
                 </div>
 
                 <div class="service-card">
                     <div class="service-card__icon">💆</div>
                     <h3 class="service-card__title">Epilatie</h3>
-                    <p class="service-card__description">Wenkbrauwen, gelaat, benen, bikini en oksels</p>
-                    <div class="service-card__price">€7-32</div>
+                    <p class="service-card__description">Wenkbrauwen, bovenlip, benen, bikini, oksels</p>
+                    <div class="service-card__price">Vanaf €7</div>
                 </div>
 
                 <div class="service-card">
                     <div class="service-card__icon">💄</div>
                     <h3 class="service-card__title">Make-up</h3>
-                    <p class="service-card__description">Professionele dag en avond make-up</p>
+                    <p class="service-card__description">Dag en avond make-up</p>
                     <div class="service-card__price">€20-25</div>
                 </div>
             </div>
@@ -109,7 +106,7 @@
             <h2 class="detailed-services__title">Gedetailleerde Prijslijst</h2>
             
             <div class="service-category">
-                <h3 class="service-category__title">✨ Gelaatsbehandeling</h3>
+                <h3 class="service-category__title">Gelaatsbehandeling</h3>
                 <div class="service-category__items">
                     <div class="service-item">
                         <span class="service-item__name">Basis gelaatsbehandeling Clinicare</span>
@@ -120,34 +117,34 @@
                         <span class="service-item__price">€70-90</span>
                     </div>
                     <div class="service-item">
-                        <span class="service-item__name">Masker Refresh</span>
+                        <span class="service-item__name">Masker refresh</span>
                         <span class="service-item__price">€75</span>
                     </div>
                     <div class="service-item">
-                        <span class="service-item__name">Masker Pure</span>
+                        <span class="service-item__name">Masker pure</span>
                         <span class="service-item__price">€72</span>
                     </div>
                     <div class="service-item">
-                        <span class="service-item__name">Masker Glow</span>
+                        <span class="service-item__name">Masker glow</span>
                         <span class="service-item__price">€75</span>
                     </div>
                     <div class="service-item">
-                        <span class="service-item__name">Masker Time Reverse</span>
+                        <span class="service-item__name">Masker Ime reverse</span>
                         <span class="service-item__price">€80</span>
                     </div>
                     <div class="service-item">
-                        <span class="service-item__name">Masker X3M Pure Pore</span>
+                        <span class="service-item__name">Masker X3M pure pore</span>
                         <span class="service-item__price">€75</span>
                     </div>
                     <div class="service-item">
-                        <span class="service-item__name">Masker Carboxytherapy</span>
+                        <span class="service-item__name">Masker carboxytherapy</span>
                         <span class="service-item__price">€90</span>
                     </div>
                 </div>
             </div>
 
             <div class="service-category">
-                <h3 class="service-category__title">💅 Manicure</h3>
+                <h3 class="service-category__title">Manicure</h3>
                 <div class="service-category__items">
                     <div class="service-item">
                         <span class="service-item__name">Nagels vijlen, nagelriemen zuiver maken, handcrème</span>
@@ -173,7 +170,7 @@
             </div>
 
             <div class="service-category">
-                <h3 class="service-category__title">🦶 Pedicure</h3>
+                <h3 class="service-category__title">Pedicure</h3>
                 <div class="service-category__items">
                     <div class="service-item">
                         <span class="service-item__name">Onderhoudspedicure binnen de 6 weken</span>
@@ -199,7 +196,7 @@
             </div>
 
             <div class="service-category">
-                <h3 class="service-category__title">💆 Epilatie</h3>
+                <h3 class="service-category__title">Epilatie</h3>
                 <div class="service-category__items">
                     <div class="service-item">
                         <span class="service-item__name">Wenkbrauwen onderhoud</span>
@@ -237,7 +234,7 @@
             </div>
 
             <div class="service-category">
-                <h3 class="service-category__title">🧘 Massage</h3>
+                <h3 class="service-category__title">Massage</h3>
                 <div class="service-category__items">
                     <div class="service-item">
                         <span class="service-item__name">Volledige lichaamsmassage</span>
@@ -251,7 +248,7 @@
             </div>
 
             <div class="service-category">
-                <h3 class="service-category__title">💄 Make-up</h3>
+                <h3 class="service-category__title">Make-up</h3>
                 <div class="service-category__items">
                     <div class="service-item">
                         <span class="service-item__name">Dag make-up</span>
