Wijzig meervoud naar enkelvoud voor eenmanszaak (ons/onze → mij/mijn)

--- a/diensten.html
+++ b/diensten.html
@@ -36,7 +36,7 @@
                     </a>
                 </li>
                 <li class="navbar__right-links">
-                    <a href="over.html">Over ons</a>
+                    <a href="over.html">Over mij</a>
                     <a href="contact.html">Contact</a>
                 </li>
             </ul>
@@ -45,15 +45,15 @@
             <div class="navbar__mobile-menu">
                 <a href="index.html" class="navbar__mobile-link">Home</a>
                 <a href="diensten.html" class="navbar__mobile-link">Diensten</a>
-                <a href="over.html" class="navbar__mobile-link">Over ons</a>
+                <a href="over.html" class="navbar__mobile-link">Over mij</a>
                 <a href="contact.html" class="navbar__mobile-link">Contact</a>
             </div>
         </div>
     </header>
     <main>
         <section class="page-header">
-            <h1 class="page-header__title">Onze Diensten</h1>
-            <p class="page-header__subtitle">Ontdek onze uitgebreide schoonheidsbehandelingen</p>
+            <h1 class="page-header__title">Mijn Diensten</h1>
+            <p class="page-header__subtitle">Ontdek mijn uitgebreide schoonheidsbehandelingen</p>
         </section>
 
         <section class="services">
