--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                     </a>
                 </li>
                 <li class="navbar__right-links">
-                    <a href="over.html">Over ons</a>
+                    <a href="over.html">Over mij</a>
                     <a href="contact.html">Contact</a>
                 </li>
             </ul>
@@ -45,7 +45,7 @@
             <div class="navbar__mobile-menu">
                 <a href="index.html" class="navbar__mobile-link">Home</a>
                 <a href="diensten.html" class="navbar__mobile-link">Diensten</a>
-                <a href="over.html" class="navbar__mobile-link">Over ons</a>
+                <a href="over.html" class="navbar__mobile-link">Over mij</a>
                 <a href="contact.html" class="navbar__mobile-link">Contact</a>
             </div>
         </div>
@@ -53,13 +53,13 @@
     <main>
         <section class="page-header">
             <h1 class="page-header__title">Contact</h1>
-            <p class="page-header__subtitle">Neem contact met ons op voor een afspraak</p>
+            <p class="page-header__subtitle">Neem contact met mij op voor een afspraak</p>
         </section>
 
         <section class="contact">
             <div class="contact__grid">
                 <div class="contact__info">
-                    <h2 class="contact__subtitle">Bezoek ons</h2>
+                    <h2 class="contact__subtitle">Bezoek Débeauty</h2>
                     <div class="contact__item">
                         <div class="contact__icon">📍</div>
                         <div class="contact__details">
