--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
     <link rel="manifest" href="/assets/site.webmanifest" />
 
     <!-- SEO and Social Media -->
-    <meta name="description" content="Débeauty - Schoonheid en verzorging in Baasrode. Bezoek ons voor de beste schoonheidsbehandelingen.">
+    <meta name="description" content="Débeauty - Schoonheid en verzorging in Baasrode. Bezoek Débeauty voor de beste schoonheidsbehandelingen.">
     <meta name="keywords" content="Débeauty, schoonheid, verzorging, Baasrode, beauty, care, schoonheidsbehandelingen, van eetvelde debbie">
     <meta name="author" content="van eetvelde debbie">
     <meta name="contact" content="Adres: Bookmolenstraat 124, 9200 Baasrode, Telefoon: 0479698709">
     <meta property="og:title" content="Débeauty - Schoonheid en Verzorging">
-    <meta property="og:description" content="Débeauty - Schoonheid en verzorging in Baasrode. Bezoek ons voor de beste schoonheidsbehandelingen.">
+    <meta property="og:description" content="Débeauty - Schoonheid en verzorging in Baasrode. Bezoek Débeauty voor de beste schoonheidsbehandelingen.">
     <meta property="og:image" content="/assets/sharing-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:url" content="https://www.debeauty.com">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Débeauty - Schoonheid en Verzorging">
-    <meta name="twitter:description" content="Débeauty - Schoonheid en verzorging in Baasrode. Bezoek ons voor de beste schoonheidsbehandelingen.">
+    <meta name="twitter:description" content="Débeauty - Schoonheid en verzorging in Baasrode. Bezoek Débeauty voor de beste schoonheidsbehandelingen.">
     <meta name="twitter:image" content="/assets/sharing-image.png">
 
     <!-- Stylesheet -->
@@ -60,7 +60,7 @@
                     </a>
                 </li>
                 <li class="navbar__right-links">
-                    <a href="over.html">Over ons</a>
+                    <a href="over.html">Over mij</a>
                     <a href="contact.html">Contact</a>
                 </li>
             </ul>
@@ -69,7 +69,7 @@
             <div class="navbar__mobile-menu">
                 <a href="index.html" class="navbar__mobile-link">Home</a>
                 <a href="diensten.html" class="navbar__mobile-link">Diensten</a>
-                <a href="over.html" class="navbar__mobile-link">Over ons</a>
+                <a href="over.html" class="navbar__mobile-link">Over mij</a>
                 <a href="contact.html" class="navbar__mobile-link">Contact</a>
             </div>
         </div>
@@ -80,7 +80,7 @@
                 <h1 class="hero__title">Welkom bij Débeauty</h1>
                 <p class="hero__subtitle">Dé plek voor verzorging en ontspanning in <strong>Baasrode</strong></p>
                 <div class="hero__cta">
-                    <a href="diensten.html" class="btn btn--primary">Ontdek onze diensten</a>
+                    <a href="diensten.html" class="btn btn--primary">Ontdek mijn diensten</a>
                 </div>
             </div>
         </section>
