--- a/over.html
+++ b/over.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Over ons - Débeauty</title>
+    <title>Over mij - Débeauty</title>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,7 +36,7 @@
                     </a>
                 </li>
                 <li class="navbar__right-links">
-                    <a href="over.html">Over ons</a>
+                    <a href="over.html">Over mij</a>
                     <a href="contact.html">Contact</a>
                 </li>
             </ul>
@@ -45,7 +45,7 @@
             <div class="navbar__mobile-menu">
                 <a href="index.html" class="navbar__mobile-link">Home</a>
                 <a href="diensten.html" class="navbar__mobile-link">Diensten</a>
-                <a href="over.html" class="navbar__mobile-link">Over ons</a>
+                <a href="over.html" class="navbar__mobile-link">Over mij</a>
                 <a href="contact.html" class="navbar__mobile-link">Contact</a>
             </div>
         </div>
@@ -53,17 +53,16 @@
     <main>
         <section class="page-header">
             <h1 class="page-header__title">Over Débeauty</h1>
-            <p class="page-header__subtitle">Ontdek ons verhaal en onze passie voor schoonheid</p>
+            <p class="page-header__subtitle">Ontdek mijn verhaal en mijn passie voor schoonheid</p>
         </section>
 
         <section class="about">
             <div class="about__content">
                 <div class="about__text">
-                    <h2 class="about__subtitle">Onze Missie</h2>
+                    <h2 class="about__subtitle">Mijn Missie</h2>
                     <p class="about__description">
-                        Bij Débeauty geloven we dat iedereen het recht heeft om zich mooi en zelfverzekerd te voelen. 
-                        Ons team van ervaren schoonheidsspecialisten staat klaar om jou te helpen ontspannen en 
-                        je beste zelf naar boven te halen.
+                        Bij Débeauty geloof ik dat iedereen het recht heeft om zich mooi en zelfverzekerd te voelen. 
+                        Ik sta klaar om jou te helpen ontspannen en je beste zelf naar boven te halen.
                     </p>
                 </div>
             </div>
@@ -80,7 +79,7 @@
             </div>
 
             <div class="values">
-                <h2 class="values__title">Onze Waarden</h2>
+                <h2 class="values__title">Mijn Waarden</h2>
                 <div class="values__grid">
                     <div class="value">
                         <div class="value__icon">🧘</div>
