Voeg border-box toe aan form inputs en wijzig 'Op afspraak' naar 'Openingsuren'

--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
                     <div class="contact__item">
                         <div class="contact__icon">🕒</div>
                         <div class="contact__details">
-                            <h3 class="contact__label">Op afspraak</h3>
+                            <h3 class="contact__label">Openingsuren</h3>
                             <p class="contact__text">Op afspraak</p>
                         </div>
                     </div>
