--- a/over.html
+++ b/over.html
@@ -27,26 +27,26 @@
             </div>
             <ul class="navbar__links">
                 <li class="navbar__left-links">
-                    <a href="index.html">Home</a>
-                    <a href="diensten.html">Diensten</a>
+                    <a href="/">Home</a>
+                    <a href="/diensten">Diensten</a>
                 </li>
                 <li class="navbar__logo-container">
-                    <a href="index.html" class="navbar__logo-link">
+                    <a href="/" class="navbar__logo-link">
                         <img id="navbar__logo" class="navbar__logo" src="/assets/logo.png" alt="débeauty">
                     </a>
                 </li>
                 <li class="navbar__right-links">
-                    <a href="over.html">Over mij</a>
-                    <a href="contact.html">Contact</a>
+                    <a href="/over">Over mij</a>
+                    <a href="/contact">Contact</a>
                 </li>
             </ul>
         </nav>
         <div class="navbar__mobile-overlay">
             <div class="navbar__mobile-menu">
-                <a href="index.html" class="navbar__mobile-link">Home</a>
-                <a href="diensten.html" class="navbar__mobile-link">Diensten</a>
-                <a href="over.html" class="navbar__mobile-link">Over mij</a>
-                <a href="contact.html" class="navbar__mobile-link">Contact</a>
+                <a href="/" class="navbar__mobile-link">Home</a>
+                <a href="/diensten" class="navbar__mobile-link">Diensten</a>
+                <a href="/over" class="navbar__mobile-link">Over mij</a>
+                <a href="/contact" class="navbar__mobile-link">Contact</a>
             </div>
         </div>
     </header>
