--- a/contact.html
+++ b/contact.html
@@ -95,11 +95,11 @@
 
                 <div class="contact__form-container">
                     <h2 class="contact__subtitle">Maak een afspraak</h2>
-                    <form class="contact__form" name="contact" netlify netlify-honeypot="bot-field" data-netlify="true">
-                        <input type="hidden" name="form-name" value="contact">
-                        <p class="form__hidden">
-                            <label>Don't fill this out if you're human: <input name="bot-field" /></label>
-                        </p>
+                    <form class="contact__form" id="contact-form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+                        <input type="hidden" name="_to" value="info@debeauty.be">
+                        <input type="hidden" name="_subject" value="Nieuw contactformulier bericht">
+                        <input type="hidden" name="_replyto" value="" id="reply-to">
+                        <input type="text" name="_gotcha" style="display:none">
                         
                         <div class="form__feedback form__feedback--success" id="form-success" style="display: none;">
                             <p>Bedankt! Je bericht is verzonden. We nemen zo snel mogelijk contact met je op.</p>
@@ -149,7 +149,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Débeauty</p>
+        <p>&copy; 2026 Débeauty</p>
         <p class="footer__credit">Website door <a href="https://www.dehayez.com/" target="_blank" rel="noopener">Dehayez</a></p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
