--- a/diensten.html
+++ b/diensten.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="NPH1u4JJthTRJmBAV1fpmtgW4SnXhhU01nqG_puBPlc" />
     <title>Diensten - Débeauty</title>
     
     <!-- Google Fonts -->
