Site extension fix

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta property="og:image" content="/assets/sharing-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:url" content="https://www.debeauty.com">
+    <meta property="og:url" content="https://www.debeauty.be">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Débeauty - Schoonheid en Verzorging">
     <meta name="twitter:description" content="Débeauty - Schoonheid en verzorging in Baasrode. Bezoek Débeauty voor de beste schoonheidsbehandelingen.">
