Add SEO: meta tags, structured data, sitemap, robots.txt and Search Console   verification

--- a/contact.html
+++ b/contact.html
@@ -4,19 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="NPH1u4JJthTRJmBAV1fpmtgW4SnXhhU01nqG_puBPlc" />
-    <title>Contact - Débeauty</title>
-    
+    <title>Contact & Afspraak - Débeauty Baasrode | Bookmolenstraat 124, 9200 Baasrode</title>
+
+    <!-- SEO -->
+    <meta name="description" content="Maak een afspraak bij Débeauty in Baasrode. Bookmolenstraat 124, 9200 Baasrode. Bel 0479 69 87 09 of mail info@debeauty.be. Op afspraak.">
+    <link rel="canonical" href="https://www.debeauty.be/contact" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Contact & Afspraak - Débeauty Baasrode">
+    <meta property="og:description" content="Maak een afspraak bij Débeauty. Bookmolenstraat 124, 9200 Baasrode. Bel 0479 69 87 09.">
+    <meta property="og:image" content="https://www.debeauty.be/assets/sharing-image.png">
+    <meta property="og:url" content="https://www.debeauty.be/contact">
+    <meta property="og:locale" content="nl_BE">
+    <meta property="og:site_name" content="Débeauty">
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-    
+
     <link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
     <link rel="shortcut icon" href="/assets/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
     <link rel="manifest" href="/assets/site.webmanifest" />
     <link rel="stylesheet" href="styles/main.css">
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Débeauty",
+        "telephone": "+32479698709",
+        "email": "info@debeauty.be",
+        "url": "https://www.debeauty.be/contact",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Bookmolenstraat 124",
+            "addressLocality": "Baasrode",
+            "postalCode": "9200",
+            "addressCountry": "BE"
+        },
+        "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": 51.0536,
+            "longitude": 4.1568
+        },
+        "openingHoursSpecification": {
+            "@type": "OpeningHoursSpecification",
+            "description": "Op afspraak"
+        }
+    }
+    </script>
 </head>
 <body>
     <header class="header">
