--- a/diensten.html
+++ b/diensten.html
@@ -4,19 +4,139 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="NPH1u4JJthTRJmBAV1fpmtgW4SnXhhU01nqG_puBPlc" />
-    <title>Diensten - Débeauty</title>
-    
+    <title>Diensten & Prijzen - Débeauty Baasrode | Gezichtsbehandeling, Massage, Manicure</title>
+
+    <!-- SEO -->
+    <meta name="description" content="Bekijk alle behandelingen en prijzen van Débeauty in Baasrode. Gezichtsbehandeling vanaf €54, manicure €20, pedicure €25, massage €25-60, epilatie vanaf €7 en make-up vanaf €20.">
+    <link rel="canonical" href="https://www.debeauty.be/diensten" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Diensten & Prijzen - Débeauty Baasrode">
+    <meta property="og:description" content="Bekijk alle behandelingen en prijzen. Gezichtsbehandeling, manicure, pedicure, massage, epilatie en make-up.">
+    <meta property="og:image" content="https://www.debeauty.be/assets/sharing-image.png">
+    <meta property="og:url" content="https://www.debeauty.be/diensten">
+    <meta property="og:locale" content="nl_BE">
+    <meta property="og:site_name" content="Débeauty">
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-    
+
     <link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
     <link rel="shortcut icon" href="/assets/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
     <link rel="manifest" href="/assets/site.webmanifest" />
     <link rel="stylesheet" href="styles/main.css">
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "ItemList",
+        "name": "Diensten en Prijzen - Débeauty",
+        "description": "Alle schoonheidsbehandelingen en prijzen van Débeauty in Baasrode",
+        "itemListElement": [
+            {
+                "@type": "ListItem",
+                "position": 1,
+                "item": {
+                    "@type": "Service",
+                    "name": "Gelaatsbehandeling",
+                    "description": "Basis en intensieve gelaatsbehandeling Clinicare, diverse maskers",
+                    "offers": {
+                        "@type": "AggregateOffer",
+                        "lowPrice": "54",
+                        "highPrice": "90",
+                        "priceCurrency": "EUR"
+                    },
+                    "provider": {
+                        "@type": "BeautySalon",
+                        "name": "Débeauty",
+                        "url": "https://www.debeauty.be"
+                    }
+                }
+            },
+            {
+                "@type": "ListItem",
+                "position": 2,
+                "item": {
+                    "@type": "Service",
+                    "name": "Manicure",
+                    "description": "Nagels vijlen, nagelriemen zuiver maken, handcrème, lakken, gelish",
+                    "offers": {
+                        "@type": "AggregateOffer",
+                        "lowPrice": "6",
+                        "highPrice": "20",
+                        "priceCurrency": "EUR"
+                    }
+                }
+            },
+            {
+                "@type": "ListItem",
+                "position": 3,
+                "item": {
+                    "@type": "Service",
+                    "name": "Pedicure",
+                    "description": "Onderhoudspedicure, intensieve pedicure, lakken, gelish",
+                    "offers": {
+                        "@type": "AggregateOffer",
+                        "lowPrice": "6",
+                        "highPrice": "30",
+                        "priceCurrency": "EUR"
+                    }
+                }
+            },
+            {
+                "@type": "ListItem",
+                "position": 4,
+                "item": {
+                    "@type": "Service",
+                    "name": "Epilatie",
+                    "description": "Wenkbrauwen, bovenlip, gelaat, benen, bikini, oksels",
+                    "offers": {
+                        "@type": "AggregateOffer",
+                        "lowPrice": "7",
+                        "highPrice": "32",
+                        "priceCurrency": "EUR"
+                    }
+                }
+            },
+            {
+                "@type": "ListItem",
+                "position": 5,
+                "item": {
+                    "@type": "Service",
+                    "name": "Massage",
+                    "description": "Volledige lichaamsmassage en rug- en nekmassage",
+                    "offers": {
+                        "@type": "AggregateOffer",
+                        "lowPrice": "25",
+                        "highPrice": "60",
+                        "priceCurrency": "EUR"
+                    }
+                }
+            },
+            {
+                "@type": "ListItem",
+                "position": 6,
+                "item": {
+                    "@type": "Service",
+                    "name": "Make-up",
+                    "description": "Dag make-up en avond make-up",
+                    "offers": {
+                        "@type": "AggregateOffer",
+                        "lowPrice": "20",
+                        "highPrice": "25",
+                        "priceCurrency": "EUR"
+                    }
+                }
+            }
+        ]
+    }
+    </script>
 </head>
 <body>
     <header class="header">
