--- a/index.html
+++ b/index.html
@@ -4,7 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="NPH1u4JJthTRJmBAV1fpmtgW4SnXhhU01nqG_puBPlc" />
-    <title>Débeauty - Schoonheid en Verzorging</title>
+    <title>Débeauty - Schoonheidsinstituut in Baasrode | Gezichtsbehandeling, Massage & Meer</title>
+
+    <!-- SEO -->
+    <meta name="description" content="Schoonheidsinstituut Débeauty in Baasrode. Professionele gezichtsbehandelingen, manicure, pedicure, massage, epilatie en make-up. Meer dan 20 jaar ervaring. Boek nu een afspraak.">
+    <meta name="keywords" content="schoonheidsinstituut Baasrode, gezichtsbehandeling, manicure, pedicure, massage, epilatie, make-up, schoonheidssalon Dendermonde, Débeauty">
+    <meta name="author" content="Debbie Van Eetvelde">
+    <link rel="canonical" href="https://www.debeauty.be/" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Débeauty - Schoonheidsinstituut in Baasrode">
+    <meta property="og:description" content="Professionele gezichtsbehandelingen, manicure, pedicure, massage en meer. Meer dan 20 jaar ervaring. Boek nu een afspraak.">
+    <meta property="og:image" content="https://www.debeauty.be/assets/sharing-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:url" content="https://www.debeauty.be/">
+    <meta property="og:locale" content="nl_BE">
+    <meta property="og:site_name" content="Débeauty">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Débeauty - Schoonheidsinstituut in Baasrode">
+    <meta name="twitter:description" content="Professionele gezichtsbehandelingen, manicure, pedicure, massage en meer. Boek nu een afspraak.">
+    <meta name="twitter:image" content="https://www.debeauty.be/assets/sharing-image.png">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,24 +43,115 @@
     <!-- Manifest -->
     <link rel="manifest" href="/assets/site.webmanifest" />
 
-    <!-- SEO and Social Media -->
-    <meta name="description" content="Débeauty - Schoonheid en verzorging in Baasrode. Bezoek Débeauty voor de beste schoonheidsbehandelingen.">
-    <meta name="keywords" content="Débeauty, schoonheid, verzorging, Baasrode, beauty, care, schoonheidsbehandelingen, van eetvelde debbie">
-    <meta name="author" content="van eetvelde debbie">
-    <meta name="contact" content="Adres: Bookmolenstraat 124, 9200 Baasrode, Telefoon: 0479698709">
-    <meta property="og:title" content="Débeauty - Schoonheid en Verzorging">
-    <meta property="og:description" content="Débeauty - Schoonheid en verzorging in Baasrode. Bezoek Débeauty voor de beste schoonheidsbehandelingen.">
-    <meta property="og:image" content="/assets/sharing-image.png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
-    <meta property="og:url" content="https://www.debeauty.be">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Débeauty - Schoonheid en Verzorging">
-    <meta name="twitter:description" content="Débeauty - Schoonheid en verzorging in Baasrode. Bezoek Débeauty voor de beste schoonheidsbehandelingen.">
-    <meta name="twitter:image" content="/assets/sharing-image.png">
-
     <!-- Stylesheet -->
     <link rel="stylesheet" href="styles/main.css">
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "BeautySalon",
+        "name": "Débeauty",
+        "description": "Schoonheidsinstituut in Baasrode. Professionele gezichtsbehandelingen, manicure, pedicure, massage, epilatie en make-up.",
+        "url": "https://www.debeauty.be",
+        "telephone": "+32479698709",
+        "email": "info@debeauty.be",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Bookmolenstraat 124",
+            "addressLocality": "Baasrode",
+            "postalCode": "9200",
+            "addressCountry": "BE"
+        },
+        "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": 51.0536,
+            "longitude": 4.1568
+        },
+        "openingHoursSpecification": {
+            "@type": "OpeningHoursSpecification",
+            "description": "Op afspraak"
+        },
+        "founder": {
+            "@type": "Person",
+            "name": "Debbie Van Eetvelde",
+            "jobTitle": "Schoonheidsspecialiste"
+        },
+        "image": "https://www.debeauty.be/assets/sharing-image.png",
+        "priceRange": "€7 - €90",
+        "currenciesAccepted": "EUR",
+        "areaServed": {
+            "@type": "Place",
+            "name": "Baasrode, Dendermonde"
+        },
+        "hasOfferCatalog": {
+            "@type": "OfferCatalog",
+            "name": "Schoonheidsbehandelingen",
+            "itemListElement": [
+                {
+                    "@type": "Offer",
+                    "itemOffered": {
+                        "@type": "Service",
+                        "name": "Basis gelaatsbehandeling Clinicare",
+                        "description": "Gelaatsbehandeling aangepast aan ieders huidtype",
+                        "price": "54",
+                        "priceCurrency": "EUR"
+                    }
+                },
+                {
+                    "@type": "Offer",
+                    "itemOffered": {
+                        "@type": "Service",
+                        "name": "Manicure",
+                        "description": "Nagels vijlen, nagelriemen zuiver maken, handcrème",
+                        "price": "20",
+                        "priceCurrency": "EUR"
+                    }
+                },
+                {
+                    "@type": "Offer",
+                    "itemOffered": {
+                        "@type": "Service",
+                        "name": "Pedicure",
+                        "description": "Onderhoudspedicure binnen de 6 weken",
+                        "price": "25",
+                        "priceCurrency": "EUR"
+                    }
+                },
+                {
+                    "@type": "Offer",
+                    "itemOffered": {
+                        "@type": "Service",
+                        "name": "Volledige lichaamsmassage",
+                        "description": "Volledige lichaamsmassage",
+                        "price": "60",
+                        "priceCurrency": "EUR"
+                    }
+                },
+                {
+                    "@type": "Offer",
+                    "itemOffered": {
+                        "@type": "Service",
+                        "name": "Epilatie",
+                        "description": "Wenkbrauwen, bovenlip, benen, bikini, oksels",
+                        "price": "7",
+                        "priceCurrency": "EUR"
+                    }
+                },
+                {
+                    "@type": "Offer",
+                    "itemOffered": {
+                        "@type": "Service",
+                        "name": "Make-up",
+                        "description": "Dag en avond make-up",
+                        "price": "20",
+                        "priceCurrency": "EUR"
+                    }
+                }
+            ]
+        }
+    }
+    </script>
 </head>
 <body>
     <div id="overlay" class="overlay">
