--- a/over.html
+++ b/over.html
@@ -4,13 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="NPH1u4JJthTRJmBAV1fpmtgW4SnXhhU01nqG_puBPlc" />
-    <title>Over mij - Débeauty</title>
-    
+    <title>Over Debbie - Débeauty Baasrode | 20+ Jaar Ervaring als Schoonheidsspecialiste</title>
+
+    <!-- SEO -->
+    <meta name="description" content="Maak kennis met Debbie, eigenaresse van Débeauty in Baasrode. Meer dan 20 jaar ervaring als schoonheidsspecialiste. Persoonlijke aandacht en professionele behandelingen in een warme sfeer.">
+    <link rel="canonical" href="https://www.debeauty.be/over" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Over Debbie - Débeauty Baasrode">
+    <meta property="og:description" content="Meer dan 20 jaar ervaring als schoonheidsspecialiste. Persoonlijke aandacht in een warme sfeer.">
+    <meta property="og:image" content="https://www.debeauty.be/assets/sharing-image.png">
+    <meta property="og:url" content="https://www.debeauty.be/over">
+    <meta property="og:locale" content="nl_BE">
+    <meta property="og:site_name" content="Débeauty">
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-    
+
     <link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
     <link rel="shortcut icon" href="/assets/favicon.ico" />
