Styling: worm trail cursor, inputs and social labels

--- a/diensten.html
+++ b/diensten.html
@@ -19,6 +19,8 @@
     <meta property="og:locale" content="nl_BE">
     <meta property="og:site_name" content="Débeauty">
 
+    <meta name="theme-color" content="#A6D9C6">
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -180,42 +182,42 @@
         <section class="services">
             <div class="services__grid">
                 <div class="service-card">
-                    <div class="service-card__icon">✨</div>
+                    <div class="service-card__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2z"/><path d="M8 14s1.5 2 4 2 4-2 4-2"/><circle cx="9" cy="10" r="0.5" fill="currentColor"/><circle cx="15" cy="10" r="0.5" fill="currentColor"/></svg></div>
                     <h3 class="service-card__title">Gelaatsbehandeling</h3>
                     <p class="service-card__description">Aangepast aan ieders huidtype</p>
                     <div class="service-card__price">Basis: €54<br>Intensief: €70-90</div>
                 </div>
 
                 <div class="service-card">
-                    <div class="service-card__icon">💅</div>
+                    <div class="service-card__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M18.5 2A3.5 3.5 0 0 0 15 5.5V12a3 3 0 0 0 6 0V5.5A3.5 3.5 0 0 0 18.5 2z" opacity="0.4"/><path d="M12 12v6.5a3.5 3.5 0 0 1-7 0V12"/><path d="M5.5 2A3.5 3.5 0 0 0 2 5.5V12a3 3 0 0 0 6 0V5.5A3.5 3.5 0 0 0 5.5 2z"/></svg></div>
                     <h3 class="service-card__title">Manicure</h3>
                     <p class="service-card__description">Nagels vijlen, nagelriemen zuiver maken, handcrème</p>
                     <div class="service-card__price">€20</div>
                 </div>
 
                 <div class="service-card">
-                    <div class="service-card__icon">🦶</div>
+                    <div class="service-card__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M9 18l-3 3M15 18l3 3"/><path d="M12 2C8 2 5 5 5 9c0 3 2 6 7 9 5-3 7-6 7-9 0-4-3-7-7-7z"/><path d="M12 8v4M10 10h4" opacity="0.4"/></svg></div>
                     <h3 class="service-card__title">Pedicure</h3>
                     <p class="service-card__description">Onderhoudspedicure binnen de 6 weken</p>
                     <div class="service-card__price">€25</div>
                 </div>
 
                 <div class="service-card">
-                    <div class="service-card__icon">🧘</div>
+                    <div class="service-card__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2z"/><path d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4z" opacity="0.4"/><path d="M12 6v2M12 16v2M6 12h2M16 12h2"/></svg></div>
                     <h3 class="service-card__title">Massage</h3>
                     <p class="service-card__description">Volledige lichaamsmassage</p>
                     <div class="service-card__price">€60</div>
                 </div>
 
                 <div class="service-card">
-                    <div class="service-card__icon">💆</div>
+                    <div class="service-card__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M20 7l-2-3H6L4 7"/><path d="M4 7c0 5 3 9 8 12 5-3 8-7 8-12"/><path d="M12 11c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2z" opacity="0.4"/></svg></div>
                     <h3 class="service-card__title">Epilatie</h3>
                     <p class="service-card__description">Wenkbrauwen, bovenlip, benen, bikini, oksels</p>
                     <div class="service-card__price">Vanaf €7</div>
                 </div>
 
                 <div class="service-card">
-                    <div class="service-card__icon">💄</div>
+                    <div class="service-card__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2L9 9H2l5.5 4.5L5 21l7-5 7 5-2.5-7.5L22 9h-7L12 2z"/></svg></div>
                     <h3 class="service-card__title">Make-up</h3>
                     <p class="service-card__description">Dag en avond make-up</p>
                     <div class="service-card__price">€20-25</div>
@@ -382,6 +384,12 @@
                 </div>
             </div>
 
+        </section>
+
+        <section class="services-cta">
+            <h2 class="services-cta__title">Interesse?</h2>
+            <p class="services-cta__text">Neem gerust contact op om een afspraak te maken</p>
+            <a href="/contact" class="btn btn--primary">Maak een afspraak</a>
         </section>
     </main>
     <footer>
