--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <meta name="twitter:description" content="Professionele gezichtsbehandelingen, manicure, pedicure, massage en meer. Boek nu een afspraak.">
     <meta name="twitter:image" content="https://www.debeauty.be/assets/sharing-image.png">
 
+    <meta name="theme-color" content="#A6D9C6">
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -203,17 +205,17 @@
         <section class="features">
             <div class="features__grid">
                 <div class="feature">
-                    <div class="feature__icon">✨</div>
+                    <div class="feature__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 3l1.09 3.36h3.54l-2.86 2.08 1.09 3.36L12 9.72l-2.86 2.08 1.09-3.36-2.86-2.08h3.54z"/><path d="M5 16l1.09 3.36h3.54l-2.86 2.08 1.09 3.36L5 22.72l-2.86 2.08 1.09-3.36-2.86-2.08h3.54z" opacity="0.4"/><path d="M19 16l1.09 3.36h3.54l-2.86 2.08 1.09 3.36L19 22.72l-2.86 2.08 1.09-3.36-2.86-2.08h3.54z" opacity="0.4"/></svg></div>
                     <h3 class="feature__title">Schoonheidsbehandelingen</h3>
                     <p class="feature__text">Professionele gezichts- en lichaamsbehandelingen</p>
                 </div>
                 <div class="feature">
-                    <div class="feature__icon">💅</div>
+                    <div class="feature__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M18.5 2A3.5 3.5 0 0 0 15 5.5V12a3 3 0 0 0 6 0V5.5A3.5 3.5 0 0 0 18.5 2z" opacity="0.4"/><path d="M12 12v6.5a3.5 3.5 0 0 1-7 0V12"/><path d="M5.5 2A3.5 3.5 0 0 0 2 5.5V12a3 3 0 0 0 6 0V5.5A3.5 3.5 0 0 0 5.5 2z"/></svg></div>
                     <h3 class="feature__title">Nagelverzorging</h3>
                     <p class="feature__text">Manicure, pedicure en nagelstyling</p>
                 </div>
                 <div class="feature">
-                    <div class="feature__icon">🧘</div>
+                    <div class="feature__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2z"/><path d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4z" opacity="0.4"/><path d="M12 6v2M12 16v2M6 12h2M16 12h2"/></svg></div>
                     <h3 class="feature__title">Ontspanning</h3>
                     <p class="feature__text">Massages en wellness behandelingen</p>
                 </div>
